# spfe-framework

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  make.sh
circuits/helper/: fixpoint.h
circuits/insurance/: Makefile  README.md  age.pub.spec  annual_drive.priv.c  annual_drive.priv.spec  calculate_basic_price.pub.spec  car_usage.priv.c  car_usage.priv.spec  categorize_car.priv.c  categorize_car.priv.spec  damage.pub.c  damage.pub.spec  discount.pub.spec  driver.priv.c  driver.priv.spec  driver_person.pub.c  driver_person.pub.spec  extras.pub.spec  flensburg.priv.spec  insurance_scope.pub.spec  location.priv.spec  protletter.pub.spec  saison.pub.spec  serverInputFile.txt  test.merge
src/: CMakeLists.txt
src/merger/: CMakeLists.txt  merger.cpp  merger.h  merger_main.cpp
src/pfe/: CMakeLists.txt  InsuranceGUI.cpp  InsuranceGUI.hpp  TestGUI.cpp  insuranceCalculator.cpp
src/pfe/ABY_application/: CMakeLists.txt  aby_pfe.cpp  aby_pfe.h
src/tests/: CMakeLists.txt
src/tests/merger_tests/: CMakeLists.txt  basic_tests.cpp  getNextLine.cpp  getRange.cpp  handleCircuitTest.cpp  handleInputs.cpp  isNumber.cpp  isValidParsingString.cpp  parsePublicCircuit.cpp  parseUC.cpp  removeComments.cpp  stringEndsWith.cpp
src/tests/merger_tests/test_files/: getNextLineTest.txt
